--- a/templates/comment/add.html
+++ b/templates/comment/add.html
@@ -1,2 +1,15 @@
-ADD: $request_method
-$query_parameters
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Добавить комментарий</title>
+</head>
+<body>
+    <form action="/comment" method="POST">
+        <input type="text" name="text">
+        <input type="submit" value="Добавить">
+    </form>
+</body>
+</html>
