--- a/templates/comment/success.html
+++ b/templates/comment/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Добавить комментарий</title>
+    <title>Комментарий успешно добавлен</title>
     <style>
         h1 {
             color:green;
