--- a/templates/comment/item.html
+++ b/templates/comment/item.html
@@ -3,7 +3,7 @@
         Номер комментария #$id
     </div>
     <div class="row">
-        Фамилия: $id
+        Фамилия: $last_name
     </div>
     <div class="row">
         Имя: $first_name
